Asset Model and contoller added
